# blink

./: .gitignore  Cargo.toml  LICENSE  analyze.py  analyze_green copy 2.py  analyze_green copy.py  analyze_green.py  analyze_silent_drop.py  analyze_yellow.py  detail.py  detail_old.py  diag_boxA_detail.py  diag_grb200415a_sat.py  diag_grb221009a_sat.py  diag_grb260226a_sat.py  diag_overlay.py  diag_packets_sat.py  diag_per_box.py  diag_plot_hist.py  gbm_tgf_catalog_offline.csv  gbm_tgf_catalog_wwlln.csv  init.sql  may_2020_schedule.md  pipeline.sh  pipeline_run.sh  plot.py  plot_each_saturation.py  plot_eng_1k.py  plot_map.py  plot_saturation.py  plot_saturation_overview.py  plot_silent_drop.py  refresh_statistics.sql  refresh_task.sql  reset_failed.sql  reset_stuck.sql  scatter_200415a_large.py  scatter_221009a_large.py  scatter_260226a_large.py  scatter_overview_all.py  (+5 more)
.devcontainer/: devcontainer.json
analysis/: lightcurve.py  powerlaw.py  pyproject.toml
analysis/hxmt-catalog/: fp-distribution3.py  zenith-noon.py
crates/blink-algorithms/: Cargo.toml
crates/blink-core/: Cargo.toml
crates/blink-lightning/: Cargo.toml
crates/blink_algorithms/: Cargo.toml
crates/blink_core/: Cargo.toml
crates/blink_fermi_gbm/: Cargo.toml
crates/blink_hxmt_he/: Cargo.toml
crates/blink_hxmt_he/src/: algorithms.rs  lib.rs  types.rs
crates/blink_hxmt_he/src/algorithms/: continuous.rs
crates/blink_hxmt_he/src/algorithms/saturation/: find_stime.rs  rec_sci_data.rs
crates/blink_hxmt_he/src/io/: level_1b.rs  level_1k.rs
crates/blink_hxmt_he/src/io/level_1b/: filename.rs
crates/blink_hxmt_he/src/io/level_1k/: att.rs  orbit.rs
crates/blink_hxmt_he/src/types/: detector.rs  event.rs  satellite.rs
crates/blink_hxmt_he/src/types/chunk/: from_epoch.rs  search.rs
crates/blink_lightning/: Cargo.toml
crates/blink_solar/: Cargo.toml
crates/blink_svom_grm/: Cargo.toml
crates/blink_task/: Cargo.toml
crates/blink_task/src/: db.rs  worker.rs
crates/blink_task/src/types/: record.rs
crates/core/blink/: Cargo.toml
crates/core/blink/src/: main.rs
crates/core/blink_core/: Cargo.toml
crates/core/blink_core/src/: error.rs  traits.rs  types.rs
crates/core/blink_core/src/traits/: chunk.rs  event.rs  instrument.rs  interpolatable.rs  satellite.rs  temporal.rs
crates/core/blink_core/src/types/: attitude.rs  mission_elapsed_time.rs  position.rs  signal.rs
crates/core/blink_lightning/: Cargo.toml
crates/core/blink_lightning/src/: algorithms.rs  database.rs  lib.rs
crates/core/blink_lightning/src/algorithms/: associated.rs  coincidence.rs
crates/core/blink_summarize/: Cargo.toml
crates/core/blink_summarize/src/: main.rs
crates/core/blink_task/: Cargo.toml
crates/core/blink_task/src/: lib.rs
crates/satellites/blink_svom_grm/: Cargo.toml
crates/satellites/blink_svom_grm/src/: io.rs  types.rs
crates/satellites/blink_svom_grm/src/io/: att.rs  evt.rs  file.rs  orb.rs
crates/satellites/blink_svom_grm/src/io/evt/: ebounds_hdu.rs  events_hdu.rs  gti_hdu.rs
crates/satellites/blink_svom_grm/src/types/: chunk.rs  event.rs  satellite.rs
crates/satellites/blink_svom_grm/src/types/chunk/: search.rs
crates/workflows/blink/: Cargo.toml
crates/workflows/blink/src/: cli.rs  main.rs  util.rs
crates/workflows/blink/src/commands/: compare.rs  detect.rs  dump.rs  extract.rs  mod.rs  reconstruct.rs  report.rs
crates/workflows/blink_cli/: Cargo.toml
crates/workflows/blink_cli/src/: main.rs
crates/workflows/blink_filter/: Cargo.toml
crates/workflows/blink_filter/src/: lib.rs
data/: .gitignore
docs/: blink.md  blink_cli.md
hxmt-catalog/: attempts.tex  common.py  count.py  data.py  detail.py  detail3.py  detail4.py  djf.py  duration-distribution.py  duration.py  energy.py  fp-distribution.py  fp-distribution2.py  fp-distribution3-fake-bg.py  fp-distribution3-fake-number.py  fp-distribution3.py  geo-distribution-djf.py  geo-distribution-jja.py  geo-distribution-lightningless.py  geo-distribution-season.py  geo-distribution.py  geo-distribution2.py  glitch.py  he-spectrum.py  jja.py  latitude-distribution.py  legend.py  longitude-distribution.py  saturation.py  saturation2.py  simultaneous.py  solar-time.py  solar-time2.py  spike.py  spike2.py  test.py  timeline.tex  veto.py  zenith-noon.py  zenith.py
hxmt-catalog/tikz/: attempts.tex  interval.tex  timeline.tex  trials.tex
paper/: 2026SCGE.cls  cover_letter.tex  main.tex  main_en.tex  numbers.csv  refs_en.bib  scpma_template_reference.tex  slides_part1.py  slides_part2.py
paper/figures/: convert_existing.sh
powerlaw/: powerlaw.py
saturation-docs/: crc_collision_ghost_events.md  time_reconstruction_algorithm.md  wrap_fix_attempts.md
saturation_docs/: 饱和判断技术文档.md
scripts/: analyze_260226A_residual.py  bake_off_hypotheses.py  build_C_ACD_t_heatmap.py  build_C_det_mlat_t_heatmap.py  build_clean_cache.py  build_clean_one_day.py  build_clean_one_day.sh  build_hv_parquet.py  c25_full_pop_stats.py  c25_selfval_slides.py  cache_training.py  check_1b_1k_match.py  check_eband_rust_bandfree.py  check_eband_rust_exact.py  check_large_fraction.py  check_sci_density.py  classify_gamma_mode.py  compare_1b_1k_260226.py  compare_5way.py  compare_finetune_rowlevel.py  concat_clean_year.py  diag_2020_10_orbital.py  diag_2020_10_pointing.py  diag_260226A_spike_forensics.py  diag_260226A_wide_spike_explained.py  diag_3box_compare.py  diag_C_1D_slices.py  diag_C_2D_lat_lon.py  diag_C_lat_and_rate.py  diag_C_t_mlat_2D.py  diag_C_time_shape.py  diag_C_vs_aacgm_lat.py  diag_C_vs_lat_full.py  diag_acd_C_shape.py  diag_acd_lookup.py  diag_acd_perrow_vs_C.py  diag_acd_vs_kyear.py  diag_acdn_subset.py  diag_after_and_drift.py  diag_all_vs_sci.py  (+336 more)
scripts/he_nai_cal/: gen_NaI_product.py  nai_pha2pi.py
scripts/sql/: init.sql  refresh_statistics.sql  (+1 more)
slides/: make_pptx.py  pptx_helpers.py  slides_part3.py  slides_part4.py
sql/: init.sql  refresh_task.sql  reset_failed.sql
src/: env.rs  lib.rs  main.rs  solar.rs  utils.rs
tests/: conftest.py  test_build_clean_cache.py  test_extract_per_sec.py  test_verify_pho_simple.py
(+255 files in other folders)
