[package]
name = "blink_task"
version = "0.1.0"
edition = "2024"

[dependencies]
blink_algorithms = { version = "0.1.0", path = "../blink_algorithms" }
blink_core = { version = "0.1.0", path = "../blink_core" }
blink_hxmt_he = { version = "0.1.0", path = "../blink_hxmt_he" }
blink_lightning = { version = "0.1.0", path = "../blink_lightning" }
blink_solar = { version = "0.1.0", path = "../blink_solar" }
chrono = { version = "0.4.42", features = ["serde"] }
hostname = "0.4.2"
rusqlite = "0.37.0"
serde_json = "1.0.145"
uom = "0.37.0"
