[package]
name = "blink_core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
fitsio = { version = "0.21.9", features = ["fitsio-src"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
uom = { version = "0.37.0", features = ["serde"] }
