[package]
name = "blink_lightning"
version = "0.1.0"
edition = "2024"

[dependencies]
blink_core = { version = "0.1.0", path = "../blink_core" }
chrono = "0.4.42"
itertools = "0.14.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
uom = "0.37.0"
