[package]
name = "blink_filter"
version = "0.1.0"
edition = "2024"

[dependencies]
blink_core = { version = "0.1.0", path = "../../core/blink_core" }
blink_hxmt_he = { version = "0.1.0", path = "../../instruments/blink_hxmt_he" }
blink_lightning = { version = "0.1.0", path = "../../core/blink_lightning" }
blink_load = { version = "0.1.0", path = "../blink_load" }
blink_svom_grm = { version = "0.1.0", path = "../../instruments/blink_svom_grm" }
blink_workflow = { version = "0.1.0", path = "../blink_workflow" }
chrono = "0.4.42"
indicatif = "0.18.3"
nanoid = "0.4.0"
serde_json = "1.0.149"
uom = "0.37.0"
